<resources>
    <string name="app_name">Flashlight</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!---Shared Preferences keys, defaults, titles, and descriptions -->

    <!--- First Preference Item -->
    <string name="enable_timer_title">Enable Timer</string>
    <string name="enable_timer_desc">Flashlight will turn off automatically</string>
    <string name="enable_timer_key">enable_timer_key</string>
    <bool name="enable_timer_default">false</bool>

    <!--- Second Preference Item -->
    <string name="add_timer_title">Add a timer</string>
    <string name="add_timer_key">add_timer_key</string>
    <string name="add_timer_default">300000</string>

    <!--- Third Preference Item -->
    <string name="enable_front_light_key">enable_front_light_key</string>
    <string name="enable_front_light_title">Use front facing light</string>
    <string name="enable_front_light_desc">Will enable front facing light</string>
    <bool name="enable_front_light_default">false</bool>

    <!--- 4th Preference Item -->
    <string name="enable_screen_awake_key">enable_screen_awake_key</string>
    <string name="enable_screen_awake_title">Keep Screen Awake</string>
    <string name="enable_screen_awake_desc">Will keep screen awake</string>
    <bool name="enable_screen_awake_default">false</bool>

    <!--- 5th Preference Item -->
    <string name="enable_notifications_key">enable_notifications_key</string>
    <string name="enable_notifications_title">Notifications</string>
    <string name="enable_notifications_desc">Will utilize notifications based on it</string>
    <bool name="enable_notifications_default">true</bool>

    <!--- actionView Preference Item -->
    <string name="action_view_title">Source Code</string>
    <string name="action_view_key">Github</string>
    <string name="action_view_desc">Flashlight is open source, TAP to redirect!</string>
    <string name="action_view_repo">https://github.com/bensadiku/Flashlight-Android</string>

</resources>
